--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: Welcome to Ticiana's homepage
-description: Feel free to follow me and get update on repositories
+title: Ticiana Linhares
+description: PhD in Computer Science and Professor @UFC
